--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 .sidenav-container{
   width: 20%;
-  background-color: purple;
+  background-color: #f5f5f5;
   padding: 20px;
   height: 100%;
 }
@@ -30,7 +30,6 @@
   padding: 15px;
   box-sizing: border-box;
   text-align: left;
-
 }
 
 .channel-list li:hover{
